# DeviousFollowersRedux

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: Parse.hpp
include/DFF/: Deal.h  DealManager.h  HitCounterManager.h  Pack.h  Rule.h  RulePath.h  Settings.h
include/Deals/: Deal.h  DealManager.h  Rule.h  RulePath.h
include/Device/: DeviceLibrary.h  DeviceManager.h
include/Relationship/: RelManager.h  RelStage.h
include/Util/: Serialization.hpp  UI.hpp
src/: Config.cpp  Config.h  Deal.cpp  DealManager.cpp  DeviceManager.cpp  HitCounterManager.cpp  Main.cpp  PCH.h  Papyrus.cpp  Papyrus.h  Rule.cpp
src/Config/: Config.h
src/DFF/: Deal.cpp  DealManager.cpp  Pack.cpp
src/Deals/: Deal.cpp  DealManager.cpp  Pack.cpp  Rule.cpp
src/Device/: DeviceManager.cpp
src/Papyrus/: Papyrus.cpp
src/Relationship/: RelManager.cpp
test/: DealManager.cpp  HitCounterManager.cpp
